wasmerror.txt
user@ec95f5b66c5c:~/repo/HRVST-Games/pumpkin_smash$ cd rust_wasm_game
user@ec95f5b66c5c:~/repo/HRVST-Games/pumpkin_smash/rust_wasm_game$ ls
Cargo.lock  Cargo.toml	src  target  wasmerror.txt
user@ec95f5b66c5c:~/repo/HRVST-Games/pumpkin_smash/rust_wasm_game$ wasn-pack build --target web
bash: wasn-pack: command not found
user@ec95f5b66c5c:~/repo/HRVST-Games/pumpkin_smash/rust_wasm_game$ wasm-pack build --target web
[INFO]: 🎯  Checking for the Wasm target...
[INFO]: 🌀  Compiling to Wasm...
   Compiling zerocopy v0.7.35
   Compiling wasm-bindgen-macro-support v0.2.95
   Compiling getrandom v0.2.15
   Compiling serde v1.0.215
error: the wasm*-unknown-unknown targets are not supported by default, you may need to enable the "js" feature. For more information see: https://docs.rs/getrandom/#webassembly-support
   --> /home/user/.cargo/registry/src/index.crates.io-6f17d22bba15001f/getrandom-0.2.15/src/lib.rs:342:9
    |
342 | /         compile_error!("the wasm*-unknown-unknown targets are not supported...
343 | |                         default, you may need to enable the \"js\" feature...
344 | |                         For more information see: \
345 | |                         https://docs.rs/getrandom/#webassembly-support...
    | |________________________________________________________________________^

error[E0433]: failed to resolve: use of undeclared crate or module `imp`
   --> /home/user/.cargo/registry/src/index.crates.io-6f17d22bba15001f/getrandom-0.2.15/src/lib.rs:398:9
    |
398 |         imp::getrandom_inner(dest)?;
    |         ^^^ use of undeclared crate or module `imp`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `getrandom` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
Error: Compiling your crate to WebAssembly failed
Caused by: Compiling your crate to WebAssembly failed
Caused by: failed to execute `cargo build`: exited with exit status: 101
  full command: cd "/home/user/repo/HRVST-Games/pumpkin_smash/rust_wasm_game" && "cargo" "build" "--lib" "--release" "--target" "wasm32-unknown-unknown"
user@ec95f5b66c5c:~/repo/HRVST-Games/pumpkin_smash/rust_wasm_game$ 
